--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h2>HTML Images</h2>
 <p>HTML images are defined with the img tag:</p>
 
-<img src="IMG_0319.jpg" alt="https://bhavisha2.github.io/AWD/" width="104" height="142">
+<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
 
 </body>
 </html>
