--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
 <body>
 
-<h2>HTML Images</h2>
-<p>HTML images are defined with the img tag:</p>
+<!--<h2>HTML Images</h2>
+<p>HTML images are defined with the img tag:</p>-->
 
-<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+  <h2>BHAVISHA MORJARIA</h2>
+  <p>Hello and Welcome to my platform. I am Bhavisha and I am currently a student at USIU, pursuing Applied Computer Technology.</p>
 
+<!--<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">-->
+<img src="IMG_0319.jpg" alt="Bhavisha" width="104" height="142">
+  
 </body>
 </html>
 
