--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>Hello and Welcome to my platform. I am Bhavisha and I am currently a student at USIU, pursuing Applied Computer Technology.</p>
 
 <!--<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">-->
-<img src="IMG_0319.jpg" alt="Bhavisha" width="104" height="142">
+<img src="IMG_0319.JPG" alt="Bhavisha" width="104" height="142">
   
 </body>
 </html>
