--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <!--<h2>HTML Images</h2>
 <p>HTML images are defined with the img tag:</p>-->
 
-  <h2>BHAVISHA MORJARIA</h2>
-  <p>Hello and Welcome to my platform. I am Bhavisha and I am currently a student at USIU, pursuing Applied Computer Technology.</p>
+  <h2> WELCOME :) </h2>
+  <p>Hello and Welcome to my platform. I am Bhavisha, if you would like to know more about me please navigate through the links.</p>
 
 <!--<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">-->
-<img src="IMG_0319.JPG" alt="Bhavisha" width="104" height="142">
+<img src="IMG_0319.JPG" alt="Bhavisha" width="200" height="200" style="border-radius: 50%;">
   
 </body>
 </html>
