--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <!--<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">-->
 <img src="IMG_0319.JPG" alt="Bhavisha" width="200" height="200" style="border-radius: 50%;">
+
+  <a href="style.html">Access the CSS math function question here!</a>
+
   
 </body>
 </html>
