--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,6 @@
 
         <h2>BHAVISHA MORJARIA</h2>
         <p>I am a student at USIU.</p>
-        <p></p>
+        <p>I am currently </p>
     </body>
 </html>
