--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,11 @@
     <body>
 
         <h2>BHAVISHA MORJARIA</h2>
-        <p>I am a student at USIU.</p>
-        <p>I am currently </p>
+        <p>I am a student at USIU-A</p>
+        <p>I am currently pursuing Applied Computer Technology ( a field similar to Computer Science.) </p>
+        <p>My first concentration is Forensic Science and Applied Technology</p>
+        <p>I love the sense of security, don't you!</p>
+        
+        <p>So happy to have you here! </p>
     </body>
 </html>
