--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <!--<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">-->
 <img src="IMG_0319.JPG" alt="Bhavisha" width="200" height="200" style="border-radius: 50%;">
 
-  <a href="style.html">Access the CSS math function question here!</a>
+
+  
+<a href="style.html">Access the CSS math function question here!</a>
+<a href="aboutme.html">About Me</a>
 
   
 </body>
