--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <p>Hello and Welcome to my platform. I am Bhavisha, if you would like to know more about me please navigate through the links.</p>
 
 <!--<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">-->
-<img src="IMG_0319.JPG" alt="Bhavisha" width="200" height="200" style="border-radius: 50%;">
+<img src="IMG_0319.JPG" alt="Bhavisha" width="200" height="200" style="border-radius: 50%;"> </br>
 
 
-  
-<a href="style.html">Access the CSS math function question here!</a>
+<a href="style.html">Access the CSS math function question here!</a></br>
 <a href="aboutme.html">About Me</a>
 
   
