--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 
 
 <a href="style.html">Access the CSS math function question here!</a></br>
-<a href="aboutme.html">About Me</a>
-
+<a href="aboutme.html">About Me</a></br>
+<a href="hobbies.html">Hobbies</a></br>
+<a href="contact.html">Contact</a></br>
+  
+  
   
 </body>
 </html>
