--- a/index.html
+++ b/index.html
@@ -1,24 +1,62 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .header h2 {
+            margin: 0;
+        }
+
+        .header .links {
+            display: flex;
+            gap: 15px; /* Spacing between links */
+        }
+
+        .header .links a {
+            text-decoration: none;
+            color: #005f73;
+            font-weight: bold;
+        }
+
+        .header .links a:hover {
+            text-decoration: underline;
+        }
+
+        p {
+            text-align: center;
+        }
+
+        img {
+            display: block;
+            margin: 20px auto;
+        }
+    </style>
+</head>
 <body>
 
-<!--<h2>HTML Images</h2>
-<p>HTML images are defined with the img tag:</p>-->
+<div class="header">
+    <h2>WELCOME :)</h2>
+    <div class="links">
+        <a href="style.html">CSS Math</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="hobbies.html">Hobbies</a>
+        <a href="contact.html">Contact</a>
+    </div>
+</div>
 
-  <h2> WELCOME :) </h2>
-  <p>Hello and Welcome to my platform. I am Bhavisha, if you would like to know more about me please navigate through the links.</p>
+<p>Hello and Welcome to my platform. I am Bhavisha. If you would like to know more about me, please navigate through the links above.</p>
 
-<!--<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">-->
-<img src="IMG_0319.JPG" alt="Bhavisha" width="200" height="200" style="border-radius: 50%;"> </br>
+<img src="IMG_0319.JPG" alt="Bhavisha" width="200" height="200" style="border-radius: 50%;">
 
-
-<a href="style.html">Access the CSS math function question here!</a></br>
-<a href="aboutme.html">About Me</a></br>
-<a href="hobbies.html">Hobbies</a></br>
-<a href="contact.html">Contact</a></br>
-  
-  
-  
 </body>
 </html>
-
