--- a/hobbies.html
+++ b/hobbies.html
@@ -11,6 +11,7 @@
             padding: 20px;
             background-color: #f4f4f9;
             color: #333;
+            align-items: center;
         }
         h1 {
             color: #005f73;
