--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            background-color: grey;
         }
 
         .header {
