--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,16 @@
     <p><strong>Email:</strong> <a href="mailto:bmorjaria@usiu.ac.ke">bmmorjaria@usiu.ac.ke</a></p>
     
     <p><strong>Phone:</strong> <a href="tel:+254712345678">+254 712345678</a></p>
+
+    <div class="header">
+    <h2>WELCOME :)</h2>
+    <div class="links">
+        <a href="style.html">CSS Math</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="hobbies.html">Hobbies</a>
+        <a href="contact.html">Contact</a>
+    </div>
+    </div>
 </div>
 
 <div class="form-footer">
