--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,11 @@
             text-align: center;
             margin-top: 20px;
         }
+        header {
+            display: flex;
+        }
     </style>
-     <div class="header">
-    <h2>WELCOME :)</h2>
+    <div class="header">
     <div class="links">
         <a href="style.html">CSS Math</a>
         <a href="aboutme.html">About Me</a>
