--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,12 @@
             margin: 20px;
             background-color: #f4f4f9;
         }
-
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        
         h2 {
             text-align: center;
             color: #005f73;
