--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,20 @@
             justify-content: space-between;
             align-items: right;
         }
+             .header .links {
+            display: flex;
+            gap: 15px; /* Spacing between links */
+        }
+
+        .header .links a {
+            text-decoration: none;
+            color: #005f73;
+            font-weight: bold;
+        }
+
+        .header .links a:hover {
+            text-decoration: underline;
+        }
         
         h2 {
             text-align: center;
