--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <div class="header">
     <h2>WELCOME :)</h2>
     <div class="links">
+        <a href="index.html">Home</a>
         <a href="style.html">CSS Math</a>
         <a href="aboutme.html">About Me</a>
         <a href="hobbies.html">Hobbies</a>
