--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,7 @@
     </style>
     <div class="header">
     <div class="links">
+         <a href="index.html">Home</a>
         <a href="style.html">CSS Math</a>
         <a href="aboutme.html">About Me</a>
         <a href="hobbies.html">Hobbies</a>
