--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-color: grey;
+            background-color: #D3D3D3;
         }
 
         .header {
