--- a/style.html
+++ b/style.html
@@ -9,6 +9,30 @@
       text-align: center;
       padding: 20px;
     }
+    .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .header h2 {
+            margin: 0;
+        }
+
+        .header .links {
+            display: flex;
+            gap: 15px; /* Spacing between links */
+        }
+
+        .header .links a {
+            text-decoration: none;
+            color: #005f73;
+            font-weight: bold;
+        }
+
+        .header .links a:hover {
+            text-decoration: underline;
+        }
     #exercise {
       margin: 20px auto;
       max-width: 600px;
@@ -71,6 +95,15 @@
       background-color:#16A085;
     }
   </style>
+   <div class="header">
+    <div class="links">
+         <a href="index.html">Home</a>
+        <a href="style.html">CSS Math</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="hobbies.html">Hobbies</a>
+        <a href="contact.html">Contact</a>
+    </div>
+    </div>
 </head>
 <body>
 
