--- a/style.html
+++ b/style.html
@@ -26,7 +26,7 @@
 
         .header .links a {
             text-decoration: none;
-            color: #000000;
+            color: #FFFFFF;
             font-weight: bold;
         }
 
