--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <a href="aboutme.html">About Me</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="contact.html">Contact</a>
+        <a href="tables.html">Tables</a>
     </div>
 </div>
 
