--- a/tables.html
+++ b/tables.html
@@ -18,12 +18,12 @@
 
                     <table>
                         <tr>
-                            <td><img src=" " /></td>
-                            <td><img src=" " /></td>
+                            <td><img src="ocean.jpeg" /></td>
+                            <td><img src="countryside.jpeg" /></td>
                         </tr>
                         <tr>
-                            <td><img src=" " /></td>
-                            <td><img src=" " /></td>
+                            <td><img src="plane.jpeg" /></td>
+                            <td><img src="castle.jpeg" /></td>
                         </tr>
                     </table>
                 </td>
