--- a/tables.html
+++ b/tables.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <head>
+     <div class="links">
+        <a href="index.html">Home</a>
+        <a href="style.html">CSS Math</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="hobbies.html">Hobbies</a>
+        <a href="contact.html">Contact</a>
+        <a href="tables.html">Tables</a>
+    </div>
     <body>
         <h2>TABLES EXERCISE</h2>
         <table>
