--- a/tables.html
+++ b/tables.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
 <head>
-     <div class="links">
+     <style>
+           .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .header h2 {
+            margin: 0;
+        }
+
+        .header .links {
+            display: flex;
+            gap: 15px; /* Spacing between links */
+        }
+
+        .header .links a {
+            text-decoration: none;
+            color: #005f73;
+            font-weight: bold;
+        }
+
+        .header .links a:hover {
+            text-decoration: underline;
+        }
+     </style>
+    <body>
+          <div class="links">
         <a href="index.html">Home</a>
         <a href="style.html">CSS Math</a>
         <a href="aboutme.html">About Me</a>
@@ -8,7 +35,6 @@
         <a href="contact.html">Contact</a>
         <a href="tables.html">Tables</a>
     </div>
-    <body>
         <h2>TABLES EXERCISE</h2>
         <table>
             <tr>
