--- a/tables.html
+++ b/tables.html
@@ -26,17 +26,19 @@
             text-decoration: underline;
         }
      </style>
-    <body>
-          
-        <h2>TABLES EXERCISE</h2>
+        <div class="header">
          <div class="links">
-        <a href="index.html">Home</a>
+         <a href="index.html">Home</a>
         <a href="style.html">CSS Math</a>
         <a href="aboutme.html">About Me</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="contact.html">Contact</a>
-        <a href="tables.html">Tables</a>
     </div>
+    </div>
+</head>
+    <body>
+          
+        <h2>TABLES EXERCISE</h2>
         <table>
             <tr>
                 <td>
@@ -65,4 +67,4 @@
             </tr>
         </table>
     </body>
-</head>
+</html>
