--- a/tables.html
+++ b/tables.html
@@ -25,6 +25,10 @@
         .header .links a:hover {
             text-decoration: underline;
         }
+     .img {
+          width: 200px;
+          height: 200px;
+     }
      </style>
         <div class="header">
          <div class="links">
