--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <a href="aboutme.html">About Me</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="contact.html">Contact</a>
-        <a href="tables.html">Tables</a>
+        <a href="tables.html">Table Layout</a>
+        <a href="table_tags.html">Table Tags</a>
     </div>
 </div>
 
