--- a/table_tags.html
+++ b/table_tags.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+</head>
+<body>
   <table>
-    <caption>
+    <caption> 19th Century French Paintings</caption>
         <col class="artistName"/>
         <colgroup id="paintingColumns">
         <col />
@@ -23,6 +25,7 @@
                 <td>2</td>
             </tr>
         </tfoot>
+    
         <tbody>
             <tr>
                 <td>The Death of Marat</td>
@@ -35,8 +38,6 @@
                 <td>1849</td>
             </tr>
         </tbody>
-    </caption>
   </table>
-</head>
 </body>
 </html>
