--- a/tables.html
+++ b/tables.html
@@ -37,6 +37,8 @@
         <a href="aboutme.html">About Me</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="contact.html">Contact</a>
+           <a href="tables.html">Table Tags</a>
+          <a href="table_tags.html">Table Tags</a>
     </div>
     </div>
 </head>
