--- a/table_tags.html
+++ b/table_tags.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
+ <!-- <style>
     table {
       border: solid 1pt black;
       border-collapse: collapse;
@@ -10,10 +10,10 @@
       border: solid 1pt black;
       padding: 10pt;
     }
-  </style>
+  </style>-->
 </head>
 <body>
-  <table>
+  <table border: solid 1pt black>
     <caption> 19th Century French Paintings</caption>
         <col class="artistName"/>
         <colgroup id="paintingColumns">
