--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <a href="contact.html">Contact</a>
         <a href="tables.html">Table Layout</a>
         <a href="table_tags.html">Table Tags</a>
+        <a href="Ptable.html">Premier League Table</a>
     </div>
 </div>
 
