--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <a href="tables.html">Table Layout</a>
         <a href="table_tags.html">Table Tags</a>
         <a href="Ptable.html">Premier League Table</a>
+        <a href="form.html">Forms</a>
     </div>
 </div>
 
