--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <a href="table_tags.html">Table Tags</a>
         <a href="Ptable.html">Premier League Table</a>
         <a href="form.html">Forms</a>
+        <a href="usiu.html">USIU</a>
     </div>
 </div>
 
