--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <a href="Ptable.html">Premier League Table</a>
         <a href="form.html">Forms</a>
         <a href="usiu.html">USIU</a>
+        <a href="js.html">JS</a>
     </div>
 </div>
 
