--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <a href="form.html">Forms</a>
         <a href="usiu.html">USIU</a>
         <a href="js.html">JS</a>
+        <a href="jshead.html">JS head</a>
     </div>
 </div>
 
