--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <a href="usiu.html">USIU</a>
         <a href="js.html">JS</a>
         <a href="jshead.html">JS head</a>
+        <a href="jsbody.html">JS body</a>
     </div>
 </div>
 
