--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <a href="js.html">JS</a>
         <a href="jshead.html">JS head</a>
         <a href="jsbody.html">JS body</a>
+        <a hred="js_external.html">JS external</a>
     </div>
 </div>
 
