--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
 
 <div class="header">
-    <h2>WELCOME :)</h2>
+    <!--<h2>WELCOME :)</h2>-->
     <div class="links">
         <a href="index.html">Home</a>
         <a href="style.html">CSS Math</a>
