--- a/external.html
+++ b/external.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <head><script src="script.js"></script></head>
 <body>
 
 <h2>Demo External JavaScript</h2>
@@ -11,7 +12,7 @@
 <p>This example links to "script.js".</p>
 <p>(myFunction is stored in "script.js")</p>
 
-<script src="script.js"></script>
+
 
 </body>
 </html>
