--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <a href="jshead.html">JS head</a>
         <a href="jsbody.html">JS body</a>
         <a href="external.html">JS external</a>
+        <a href="url.html">external Url</a>
     </div>
 </div>
 
