--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <a href="jsbody.html">JS body</a>
         <a href="external.html">JS external</a>
         <a href="url.html">external Url</a>
+        <a href="inline.html">Inline JS</a>
     </div>
 </div>
 
